--- a/modules/mod_base/lib/less/z.icons.less
+++ b/modules/mod_base/lib/less/z.icons.less
@@ -1,79 +1,6 @@
 /*
-CSS Documentation
-
-Common Zotonic icons to be reused across modules.
-
-Include icons CSS in your template:
-{% lib
-    "css/z.icons.css"
-%}
-
-Then use the icon:
-<span class="z-icon z-icon-off"></span>
-
-Note to always include 'z-icon' as well (except for convenience class 'zotonic-logo').
-
-If you want to provide a text label for accessibility (but visually hidden), 
-put the text inside <em>:
-<span class="z-icon z-icon-off"><em>Log off</em></span>
-
-For advanced usage, see the file z.icons.less.
+See: http://zotonic.com/docs/latest/manuals/templates/icons.html
 */
-
-// LESS Documentation
-//
-// This file creates CSS styles for all Zotonic icons.
-// 
-// If you need to extend an icon class, import this less file ...
-//
-//      NOTE
-//      The less files have a dependency with mod_artwork/lib/font-awesome-4,
-//      so you need to include the path to its less folder when using
-//      the lessc command.
-//
-//      For example:
-//      lessc --include-path="../../../mod_artwork/lib/font-awesome-4/less" 
-//         my_input.less my_output.css
-//
-//      Or for easier access, create a symlink to the font-awesome-4 less folder
-//      and add the symlink to the include-path.
-//
-// ... then call mixin .extend_icon(@name),
-// where @name is one of the the icon names below.
-// This will automatically extend your class to 'z-icon'.
-// Find the mixin in 'z.icons/extend.less'.
-//
-// Example:
-// 
-// .btn-remove {
-//    .extend_icon(icon-cross-circle);
-// }
-//
-// This results in:
-//
-// .z-icon,
-// .btn-remove:before {
-//      font-family: 'Zotonic';
-//      ...
-// }
-// .btn-remove:before {
-//      content: "\e609";
-// }
-//
-//
-// Extending Font Awesome 4 icons
-//
-// 1. Enable module mod_artwork.
-// 2. In LESS, add parameter 'fa' to the extend mixin:
-//      .btn-bookmark {
-//          .extend_icon(fa, fa-var-bookmark);
-//      }
-//      The icon (variable) names can be found in 
-//      'mod_artwork/lib/font-awesome-4/less/variables.less'.
-// 3. To load the webfonts, add the CSS to the template, for instance:
-//      {% lib "font-awesome-4/css/font-awesome.min.css" %}
-
-
 @import (reference) "font-awesome.less";
 
 @import "z.icons/variables.less";
