--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -20,7 +20,7 @@ limitations under the License.
 #3L {@import "3L/3L";}
 
 @import "variables.less";
-@import "../../../mod_base/lib/less/z.icons.less";
+@import (reference) "../../../mod_base/lib/less/z.icons.less";
 @import "../../../mod_artwork/lib/font-awesome-4/less/path.less";
 @import "mixins.less";
 @import "base.less";
