--- a/modules/mod_base/lib/less/z.icons/icons.less
+++ b/modules/mod_base/lib/less/z.icons/icons.less
@@ -19,6 +19,7 @@
     .z-icon-ok-circle:before { content: @icon-ok-circle; }
     .z-icon-plus:before { content: @icon-plus; }
     .z-icon-plus-circle:before { content: @icon-plus-circle; }
+    .z-icon-share:before { content: @icon-share; }
     .z-icon-twitter:before { content: @icon-twitter; }
     .z-icon-user:before { content: @icon-user; }
     .zotonic-logo:before { content: @zotonic-logo; }
