--- a/modules/mod_base/lib/less/z.icons/variables.less
+++ b/modules/mod_base/lib/less/z.icons/variables.less
@@ -25,6 +25,7 @@
 @icon-ok-circle: "\e602";
 @icon-plus: "\e60d";
 @icon-plus-circle: "\e604";
+@icon-share: "\e615";
 @icon-twitter: "\e613";
 @icon-user: "\e605";
 @zotonic-logo: @icon-logo;
