--- a/modules/mod_base/lib/css/z.icons/_src/style.css
+++ b/modules/mod_base/lib/css/z.icons/_src/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?5dy5m7');
-	src:url('fonts/icomoon.eot?#iefix5dy5m7') format('embedded-opentype'),
-		url('fonts/icomoon.woff?5dy5m7') format('woff'),
-		url('fonts/icomoon.ttf?5dy5m7') format('truetype'),
-		url('fonts/icomoon.svg?5dy5m7#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-343g4q');
+	src:url('fonts/icomoon.eot?#iefix-343g4q') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-343g4q') format('woff'),
+		url('fonts/icomoon.ttf?-343g4q') format('truetype'),
+		url('fonts/icomoon.svg?-343g4q#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -21,6 +21,10 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-share:before {
+	content: "\e615";
 }
 
 .icon-google-plus:before {
